tests/neg-custom-args/qualified-types/runtimeChecked_dependent_neg.scala
@main def Test =
  val res = foo((1: Int), 2.runtimeChecked) // error
